--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body, html {
 }
 
 .hero {
-  background: url(") no-repeat center center/cover;
+  background: url("IMG-20250821-WA0005.jpg") no-repeat center center/cover;
   height: 100vh;
   display: flex;
   align-items: center;
