--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
-  width: 100%;
+  width: 90%;
   color: white;
   overflow: hidden;
 }
@@ -40,6 +40,7 @@ body {
   font-size: 3rem;
   color: yellow;
   margin-top: -100px;
+  margin-left: -80px;
   text-shadow: 0 0 10px yellow, 0 0 20px yellow, 0 0 40px yellow;
   animation: glow 2s ease-in-out infinite alternate;
 }
