--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Segoe UI', sans-serif;
-  background: url('bg.jpg') no-repeat center center fixed;
+  background: url('IMG-20250821-WA0005.jpg') no-repeat center center fixed;
   background-size: cover;
 }
 
