--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
   justify-content: flex-end;
   align-items: flex-start;
   padding-top: 100px;
-  padding-right: 100px;
+  padding-left: 100px;
 }
 
 .hero h1 {
