--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
   height: 100vh;
   display: flex;
   justify-content: flex-end;
-  align-items: flex start;
+  align-items: flex end;
   padding: 80px 20% 0 0;
 text-align: right;
 }
